feat: support custom metadata extension
Add support to custom metadata extension

--- a/test/Makefile
+++ b/test/Makefile
@@ -3,7 +3,7 @@ CC = cc
 
 EXES = test
 
-CFLAGS += -Wall -Wextra -Wpedantic -g -I$(TOP) -std=c99
+CFLAGS += -Wall -Wextra -Wpedantic -g -I$(TOP) -std=c99 -O0
 
 all: $(EXES)
 
